# cellularGA-clustering

Datasets/ecoli/: ecoli-filtered.data
Datasets/horse-colic/: horse-colic-all.csv
Datasets/rings/: rings.data
Datasets/thyroid/: new-thyroid.data  new-thyroid.names  url.txt
so-Clustering/: CMakeLists.txt  cmd_line.txt
so-Clustering/lib/: CMakeLists.txt  MainApp.cpp  MainAppClusteringDatasets.cpp
so-Clustering/lib/algorithms/eo/: Crossover.h  Mutation.h  eoCellularEA.h  eoCellularEAMatrix.h  eoGenerationContinuePopVector.h
so-Clustering/lib/chromosome/: eoChromosome.cpp  eoChromosome.h
so-Clustering/lib/data/: Attribute.cpp  Attribute.h  ProblemData.cpp  ProblemData.hpp
so-Clustering/lib/eval/: eoClusteringEval.h
so-Clustering/lib/eval/statistics/: eoClusteringEvalWithStatistics.h
so-Clustering/lib/init/: eoClusteringInit.h
so-Clustering/lib/testset/: ClusteringTestSet.cpp  ClusteringTestSet.h  TestSet.h  TestSetDescription.cpp  TestSetDescription.h
